<resources>
    <string name="app_name">My Movies Bucket lists</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">What movie will I watch next?</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="list_name">List name</string>
    <string name="created_by">Created by</string>
    <string name="by">by</string>
    <string name="creator">Creator</string>
    <string name="new_bucket_list">New bucket list</string>
    <string name="edit_bucket_list">Edit bucket list</string>
    <string name="save">Save</string>
    <string name="_23_11_2019">23.11.2019 – 04:04:09</string>
    <string name="signout">Signout</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="signup">Sign up</string>
    <string name="confitm_password">Confitm password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="username">Username</string>
    <string name="snackbar_undo">Undo</string>
    <string name="bucketlist_not_shared">Hasn\'t been shared yet</string>
    <string name="me">me</string>
    <string name="created_by_me">Created by me</string>
    <string name="shared_with_me">Shared with me</string>
    <string name="shared_with">Shared with</string>
    <string name="_2">2</string>
    <string name="down_arrow">﹀</string>
    <string name="search_movie">Search movie</string>
    <string name="type_movie_title">Type movie title</string>
    <string name="add_movies">Add movies</string>
    <string name="create_one">Create one</string>
    <string name="movie_poster">Movie poster</string>
    <string name="no_poster">No poster</string>
    <string name="top_rated_movies_from_themoviedb_org">Top rated movies (from themoviedb.org)</string>
    <string name="results_for">Results for:</string>
    <string name="movie_decritpion_sample">Nowadays, user engagement is considered one of the most
        for the success of your app. Nowadays, user engagement is considered one of the most
        important metrics for the success of your app. Nowadays, user engagement is considered one
        of the mostimportant metrics for the success of your app</string>
    <string name="added_by">Added by</string>
    <string name="no_backdrop_available">No backdrop available</string>
    <string name="movie_title">Movie title</string>
    <string name="snackbar_text">Bucket list deleted</string>
    <string name="you_have_no_bucket_list">You have no bucket list</string>
    <string name="no_bucket_lists_shared_with_you">No bucket lists shared with you</string>
    <string name="no_movies_in_this_bucket_list">No movies in this bucket list</string>
    <string name="delete">DELETE</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="remove_bucketlist_dialog_title">Remove bucket list?</string>
    <string name="remove_bucketlist_dialog_message">By deleting this bucket list, it will be no longer available to users you share with.</string>
    <string name="watched">Watched</string>
    <string name="sign_out">Sign out</string>
    <string name="click_on_movies_to_delete">Click on movies to delete</string>
    <string name="no_video">No video</string>
    <string name="latest">Latest</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top Rated</string>
    <string name="search">Search</string>
    <string name="popular">Popular</string>
    <string name="welcome">Welcome</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="username_constaints">Username must be alphanumeric of lenght 3 to 16, starting with a character</string>
    <string name="wrong_password_confirmation">Wrong password confirmation</string>
    <string name="signed_up_successfully">Signed up successfully</string>
    <string name="bucketlist_name_cannor_be_empty">Bucket list name can not be empty</string>
    <string name="bucketlist_updated">Bucket list updated</string>
    <string name="new_movie_saved">New movies bucket list saved</string>
    <string name="bucketlist_deleted_by_owner">Bucket list has been deleted by its owner</string>
    <string name="movies_selected">movies selected</string>
    <string name="select_one_or_mode_movies">Please select one or more movies</string>
    <string name="bucketlist_deleted">Bucket list deleted</string>
    <string name="finish">Finish</string>
</resources>
