<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="mse.mobop.ui.bucketlist.MoviesBucketlistsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_movies_bucketlists" >
        <action
            android:id="@+id/action_nav_home_to_nav_addEditBucketlistFragment"
            app:destination="@id/nav_addEditBucketlistFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="mse.mobop.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="mse.mobop.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="mse.mobop.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="mse.mobop.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="mse.mobop.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_addEditBucketlistFragment"
        android:name="mse.mobop.ui.bucketlist.AddEditBucketlistFragment"
        android:label="fragment_add_edit_bucketlist"
        tools:layout="@layout/fragment_add_edit_bucketlist" />
</navigation>