<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.bucketlist.OneBucketlistFragment">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        style="@style/Fragment"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_by"
                android:layout_marginEnd="5dp"
                style="@style/Bucketlist.CreatedBy" />
            <TextView
                android:id="@+id/bucketlist_creator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creator"
                style="@style/Bucketlist.CreatedBy"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bucketlist_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_23_11_2019"
                style="@style/Bucketlist.DateTime"
                android:layout_marginEnd="5dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/bucketlist_shared_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/shared_with"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_movies_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>