<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/owned_header"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/colorRecyclerHeader"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/created_by_me"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/owned_header_nbr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/_2"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:id="@+id/owned_header_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/down_arrow"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>

        <include layout="@layout/recycler_bucketlists_owned"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <LinearLayout
            android:id="@+id/shared_header"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/colorRecyclerHeader"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="1dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/shared_with_me"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/shared_header_nbr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/_2"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:id="@+id/shared_header_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/down_arrow"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>

        <include layout="@layout/recycler_bucketlists_shared"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_bucketlist_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>