<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/bucketlist_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/list_name"
                style="@style/Card.Title"
                android:ellipsize="end"
                android:maxLines="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/bucketlist_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_23_11_2019"
                    style="@style/Card.DateTime"
                    android:layout_marginEnd="5dp"
                    android:drawableTint="?attr/colorLightGray"
                    android:drawablePadding="3dp"
                    android:drawableStart="@drawable/ic_time"/>
                <LinearLayout
                    android:id="@+id/bucketlist_creator_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_person"
                        android:tint="?attr/colorLightGray"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:id="@+id/bucketlist_creator_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/creator"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:ellipsize="end"
                        style="@style/Card.DateTime"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/bucketlist_shared_with"
                style="@style/Card.DateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:textColor="?attr/colorLightGray"
                android:text="@string/shared_with_me"
                android:drawableTint="?attr/colorVeryLightGray"
                android:ellipsize="end"
                android:maxLines="1"
                android:drawablePadding="3dp"
                android:drawableStart="@drawable/ic_group"/>
        </LinearLayout>

        <TextView
            android:id="@+id/bucketlist_movies_count"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            tools:text="8"
            android:drawableTint="?attr/colorVeryLightGray"
            android:drawablePadding="3dp"
            android:drawableEnd="@drawable/ic_movie"
            style="@style/Bucketlist.CreatedBy"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
