<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginBottom="@dimen/activity_margin_half"
    style="@style/BucketlistCard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/poster_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/placeholder_grey"
            app:cardCornerRadius="3dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/movie_progress"
                android:layout_width="@dimen/activity_margin"
                android:layout_height="@dimen/activity_margin"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/movie_no_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_poster"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="@dimen/poster_thumb_width"
                android:layout_height="@dimen/poster_thumb_height"
                android:contentDescription="@string/movie_poster" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/movie_title"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/poster_card_view"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Movie Title" />

        <TextView
            android:id="@+id/movie_added_by"
            style="@style/AddedBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:drawableTint="@color/lightGray"
            android:drawableStart="@drawable/ic_person"
            android:text="@string/username"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>