<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/colorAppBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.bosphere.fadingedgelayout.FadingEdgeLayout
                android:id="@+id/fading_edge_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fel_edge="bottom"
                app:fel_size_bottom="80dp"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/movie_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="150dp"
                    android:src="@drawable/no_backdrop"
                    tools:ignore="ContentDescription"
                    android:scaleType="centerCrop"/>

                <ProgressBar
                    android:id="@+id/movie_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/colorPrimaryDefault"/>

                <TextView
                    android:id="@+id/no_backdrop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:text="@string/no_backdrop_available"
                    android:layout_centerInParent="true"/>
            </com.bosphere.fadingedgelayout.FadingEdgeLayout>

            <TextView
                android:id="@+id/movie_title"
                style="@style/Card.SubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="6dp"
                android:layout_centerHorizontal="true"
                android:layout_alignBottom="@id/fading_edge_layout"
                tools:text="@string/movie_title" />

        </RelativeLayout>

        <TextView
            android:id="@+id/movie_year"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="EN | 2009"
            android:textStyle="bold"
            android:background="@drawable/background_movie_year"/>

        <TextView
            android:id="@+id/movie_desc"
            style="@style/TextAppearance.AppCompat.Caption"
            android:textColor="?attr/colorLightGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            tools:text="@string/movie_decritpion_sample"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"/>

        <include layout="@layout/dialog_movie_trailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>